--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 									<li><a href="https://github.com/StaHk-collab" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://www.hackerrank.com/hkmahapatra24" class="icon brands alt fa-hackerrank"><span class="label">fa-hackerrank</span></a></li>
 									<li><a href="https://www.kaggle.com/hkmahapatra" class="icon brands alt fa-kaggle"><span class="label">Kaggle</span></a></li>
-									<li><a href="https://twitter.com/Harekru91555835" class="icon brands alt fa-twitter"><span class="label">twitter</span></a></li>
+									<li><a href="https://twitter.com/hk_mahapatra" class="icon brands alt fa-twitter"><span class="label">twitter</span></a></li>
 									
 								</ul>
 							</section>
